--- a/src/styles/studentModal.css
+++ b/src/styles/studentModal.css
@@ -59,6 +59,16 @@
   border: 1px solid var(--border-color);
 }
 
+.convert-box-section {
+  background: var(--card-background);
+  border-radius: 8px;
+  padding: 15px;
+  border: 1px solid var(--border-color);
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
 .gifts-grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(125px, 1fr));
@@ -114,6 +124,10 @@
   border: 1px solid var(--text-primary);
   border-radius: 4px;
   text-align: center;
+}
+
+.convert-input {
+  margin-right: 5px;
 }
 
 .total-exp {
@@ -193,21 +207,6 @@
   font-size: 0.8em;
   color: var(--text-primary);
   text-align: center;
-}
-
-.close-button {
-  width: 100%;
-  padding: 8px;
-  background-color: #4a5568;
-  color: var(--text-primary);
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  margin-top: 20px;
-}
-
-.close-button:hover {
-  background-color: #2d3748;
 }
 
 @media (max-width: 768px) {
