--- a/src/styles/resourceDisplay.css
+++ b/src/styles/resourceDisplay.css
@@ -1,5 +1,6 @@
 /* 
  * Shared styles for resource display components:
+ * - StudentItemCard.vue
  * - StudentResourceGrid.vue
  * - StudentResourceSummary.vue 
  * - StudentMaterialsSection.vue
