--- a/src/styles/studentModal.css
+++ b/src/styles/studentModal.css
@@ -83,217 +83,6 @@
   gap: 5px;
 }
 
-/* ==========================================================================
-   Bond Section
-   ========================================================================== */
-.bond-section {
-  align-self: center;
-  background: var(--card-background);
-  border-radius: 8px;
-  padding: 15px;
-  border: 1px solid var(--border-color);
-}
-
-.bond-info {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 5px;
-}
-
-.exp-info {
-  font-size: 0.8em;
-  color: var(--text-primary);
-  text-align: center;
-}
-
-.bond-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 0px;
-  margin-bottom: 15px;
-}
-
-.bond-display {
-  display: flex;
-  align-items: center;
-  gap: 5px;
-}
-
-.bond-icon-container {
-  position: relative;
-  width: 50px;
-  height: 50px;
-}
-
-.bond-icon {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
-
-.bond-number {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -60%);
-  font-weight: bold;
-  font-size: medium;
-  color: white;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
-}
-
-.bond-arrow {
-  font-size: 24px;
-  color: var(--text-primary);
-}
-
-.bond-input {
-  width: 60px;
-  padding: 4px;
-  border: 1px solid var(--text-primary);
-  border-radius: 4px;
-  text-align: center;
-  display: block;
-  margin: 0 auto;
-}
-
-.total-exp {
-  font-size: 1.1em;
-  font-weight: bold;
-  color: var(--text-primary);
-  margin-top: 15px;
-  text-align: center;
-  background: var(--background-primary);
-  padding: 10px 15px;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-  border: 1px solid rgba(255, 255, 255, 0.1);
-}
-
-/* ==========================================================================
-   Convert Box Section
-   ========================================================================== */
-.convert-box-section {
-  align-self: center;
-  background: var(--card-background);
-  border-radius: 8px;
-  padding: 15px;
-  border: 1px solid var(--border-color);
-  gap: 10px;
-}
-
-.convert-input {
-  margin-right: 5px;
-}
-
-/* ==========================================================================
-   Gifts Grid Section
-   ========================================================================== */
-.gifts-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(125px, 1fr));
-  gap: 7px;
-  height: auto;
-  background-color: var(--background-primary);
-}
-
-.gift-card {
-  border: 1px solid var(--border-color);
-  border-radius: 8px;
-  padding: 10px;
-  background-color: var(--card-background);
-  display: flex;
-  flex-direction: column;
-}
-
-.gift-header {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 10px;
-}
-
-.gift-icon-container {
-  position: relative;
-  width: 80px;
-  height: 80px;
-}
-
-.gift-icon {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.grade-icon {
-  position: absolute;
-  bottom: -5px;
-  right: -15px;
-  width: 34px;
-  height: 30px;
-  object-fit: contain;
-}
-
-.gift-details {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-.gift-grade {
-  display: flex;
-  align-items: center;
-  gap: 5px;
-  justify-content: center;
-}
-
-.exp-value {
-  font-size: 0.9em;
-  font-weight: bold;
-  color: var(--text-primary);
-}
-
-.gift-name {
-  font-size: 0.9em;
-  font-weight: bold;
-  text-align: center;
-  color: var(--text-primary);
-}
-
-.gift-exp-info {
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
-  align-items: center;
-}
-
-.gift-input {
-  width: 90px;
-  padding: 6px;
-  background-color: var(--input-color);
-  border: 1px solid var(--border-color);
-  border-radius: 4px;
-  text-align: center;
-}
-
-.gift-input::placeholder {
-  color: var(--input-placeholder);
-}
-
-.invisible-placeholder {
-  height: 36px;
-  width: 100%;
-  display: flex;           
-  align-items: center;     
-  justify-content: center; 
-  font-size: 0.9em;
-  font-weight: bold;
-  color: var(--text-primary);
-}
-
 /* XP Level Section Styles */
 .xp-level-section {
   padding: 1rem;
@@ -334,37 +123,7 @@
   overflow: hidden;
 }
 
-.resource-content {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 2px;
-}
-
-.resource-icon {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.resource-quantity {
-  position: absolute;
-  bottom: 0px;
-  right: 0px;
-  font-size: 1em;
-  color: var(--text-tertiary);
-  font-weight: 500;
-  text-shadow: 
-    -0.5px -0.5px 0 #fff,
-    0.5px -0.5px 0 #fff,
-    -0.5px 0.5px 0 #fff,
-    0.5px 0.5px 0 #fff;
-  z-index: 1;
-}
-
+/* Resource Input */
 .resource-input {
   position: absolute;
   bottom: 0;
