--- a/src/styles/studentModal.css
+++ b/src/styles/studentModal.css
@@ -186,6 +186,9 @@
   
   .left-column {
     margin-bottom: 15px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
   }
   
   input[type="number"],
