--- a/src/styles/studentUpgrade.css
+++ b/src/styles/studentUpgrade.css
@@ -43,12 +43,20 @@
   align-items: center;
   gap: 10px;
   margin-bottom: 10px;
+  justify-content: space-between;
 }
 
 .type-icon {
   width: 50px;
   height: 50px;
   object-fit: cover;
+}
+
+/* Content layout */
+.content-container {
+  display: flex;
+  gap: 5px;
+  align-items: center;
 }
 
 /* Level display */
@@ -91,6 +99,7 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
+  flex: 1;
 }
 
 .slider-row {
@@ -127,6 +136,11 @@
 
 /* Responsive adjustments */
 @media (max-width: 976px) {
+  .content-container {
+    flex-direction: row;
+    align-items: flex-start;
+  }
+
   .slider {
     height: 8px;
   }
@@ -135,4 +149,17 @@
     width: 16px;
     height: 16px;
   }
-} 
+}
+
+@media (max-width: 420px) {
+  .section-title {
+    padding-bottom: 5px;
+  }
+  
+  .type-header {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0px;
+    margin-bottom: 5px;
+  }
+}
