Refactor materials section

--- a/src/styles/resourceDisplay.css
+++ b/src/styles/resourceDisplay.css
@@ -1,9 +1,9 @@
-/* 
+/*
  * Shared styles for resource display components:
  * - StudentItemCard.vue
  * - StudentResourceGrid.vue
- * - StudentResourceSummary.vue 
- * - StudentMaterialsSection.vue
+ * - StudentResourceSummary.vue
+ * - MaterialsSection.vue
  */
 
 /* Resource grid layout */
