refactor: fix naming inconsistencies in consumable hooks, stores and components

--- a/src/styles/resourceDisplay.css
+++ b/src/styles/resourceDisplay.css
@@ -1,7 +1,7 @@
 /*
  * Shared styles for resource display components:
- * - StudentItemCard.vue
- * - StudentResourceGrid.vue
+ * - StudentResourceCard.vue
+ * - StudentItemsGrid.vue
  * - StudentResourceSummary.vue
  * - MaterialsSection.vue
  */
