--- a/src/style.css
+++ b/src/style.css
@@ -108,7 +108,10 @@ button:hover {
   border-color: var(--accent-color);
 }
 
-button:focus,
+button:focus {
+  outline: none;
+}
+
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
